# modelmachine

./: .editorconfig  .gitignore  .travis.yml  DEVELOPMENT.md  Makefile  Pipfile  README.md  TODO.md  pylintrc  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml  ruff_defaults.toml  setup.py
.githooks/: pre-commit
.github/workflows/: pytest.yml  python-publish.yml
docs/: assembler.md  changelog.md  config.md  config.toml  development.md  implementation.md  ipython.md  todo.md
docs/references/: bordachenkova.architecture.model.machines.2010.doc  main.css  mm0.html  um3.command.set.html  um3.tasks.html
docs/references/mm0_files/: ASCIIMathML.js  mspace.js
docs/references/um3.tasks_files/: main.css
modelmachine/: .__main__.py.swp  .cu.py.swp  __init__.py  __main__.py  alu.py  asm.py  cell.py  cli.py  cpu.py  cu.py  ide.py  io.py  ipython.py  memory.py  numeric.py  program.mmach  prompt.py  ram.py  register.py
modelmachine/cpu/: asm.py  common_parsing.py  cpu.py  source.py
modelmachine/cu/: control_unit.py  control_unit_0.py  control_unit_1.py  control_unit_2.py  control_unit_3.py  control_unit_m.py  control_unit_r.py  control_unit_s.py  control_unit_v.py  halt_error.py  opcode.py  status.py
modelmachine/ide/: __init__.py  asm.py  assemble.py  common_parsing.py  debug.py  directive.py  dump.py  get_program.py  load.py  source.py  split_to_word_and_spaces.py  user_config.py
modelmachine/ide/asm/: asm.py  errors.py  mm3.py  operand.py  segment.py  undefined_label_error.py
modelmachine/ide/asm/opcode_table/: __init__.py  mm0.py  mm1.py  mm2.py  mm3.py  mmm.py  mmr.py  mms.py  mmv.py
modelmachine/io/: code_segment.py  io.py
modelmachine/memory/: insort.py  ram.py  register.py
modelmachine/prompt/: color_theme.py  colors.py  is_interactive.py  prompt.py
modelmachine/samples/: __init__.py  bordachenkova_mm3_sample.mmach
modelmachine/shared/: enum_mixin.py  insort_range.py
modelmachine/tests/: .test_cu.py.swp  .test_memory.py.swp  __init__.py  test_alu.py  test_asm.py  test_cpu.py  test_cu.py  test_cu_abstract.py  test_cu_bord_fixed.py  test_cu_bord_variable.py  test_cu_fixed.py  test_cu_variable.py  test_ide.py  test_io.py  test_main.py  test_memory.py  test_numeric.py
samples/: bordachenkova_mm1_sample.mmach  bordachenkova_mm2_sample.mmach  bordachenkova_mm3_sample.mmach  bordachenkova_mms_sample.mmach  bordachenkova_mmv_sample.mmach  minimal.mmach  mm-0_discr.mmach  mm-1_discr1.mmach  mm-1_discr2.mmach  mm-1_max_of_2.mmach  mm-2_factorial.mmach  mm-2_flags.mmach  mm-2_max_of_2.mmach  mm-2_sample.mmach  mm-3_add.mmach  mm-3_asm_add.mmach  mm-3_discr.mmach  mm-3_discr_const.mmach  mm-3_discr_intro.mmach  mm-3_discriminant.mmach  mm-3_divides_by.mmach  mm-3_factorial.mmach  mm-3_factorial2.mmach  mm-3_jump.mmach  mm-3_max_of_2.mmach  mm-3_max_of_3.mmach  mm-3_selfmod1.mmach  mm-3_selfmod2.mmach  mm-3_sum_of_squares.mmach  mm-m_array_sum.mmach  mm-m_asm_array_sum.mmach  mm-m_max_of_3.mmach  mm-m_opcode11.mmach  mm-m_sample.mmach  mm-m_sum_of_squares.mmach  mm-r_sample.mmach  mm-r_sum_of_squares.mmach  mm-s_discr.mmach  mm-s_factorial.mmach  mm-s_factorial2.mmach  (+15 more)
samples/asm/: mm-0_discr.mmach  mm-0_factorial.mmach  mm-0_sample.mmach  mm-1_discr1.mmach  mm-1_discr2.mmach  mm-1_max_of_2.mmach  mm-1_sample.mmach  mm-1_test_debug.mmach  mm-2_factorial.mmach  mm-2_flags.mmach  mm-2_max_of_2.mmach  mm-2_sample.mmach  mm-3_add.mmach  mm-3_discr.mmach  mm-3_divides_by.mmach  mm-3_factorial.mmach  mm-3_factorial2.mmach  mm-3_jump.mmach  mm-3_max_of_2.mmach  mm-3_max_of_3.mmach  mm-3_sample.mmach  mm-3_selfmod1.mmach  mm-3_selfmod2.mmach  mm-3_sum_of_squares.mmach  mm-m_add_to_array.mmach  mm-m_array_sum.mmach  mm-m_max_of_3.mmach  mm-m_opcode11.mmach  mm-m_sample.mmach  mm-m_sum_of_squares.mmach  mm-r_max_of_3.mmach  mm-r_sample.mmach  mm-r_sum_of_squares.mmach  mm-s_discr.mmach  mm-s_factorial.mmach  mm-s_factorial1.mmach  mm-s_factorial2.mmach  mm-s_sample.mmach  mm-v_factorial.mmach  mm-v_sample.mmach
samples/bad/: mm-m_opcode11.mmasm  mm-v_infinite_loop.mmach
tests/: __init__.py  test_alu.py  test_asm.py  test_cell.py  test_cpu.py  test_cu_abstract.py  test_cu_fixed.py  test_cu_variable.py  test_ide.py  test_io.py  test_memory.py  test_numeric.py  test_ram.py  test_register.py  test_sample.py  test_split_to_word_and_spaces.py
tests/cpu/: test_cpu.py  test_source.py
tests/cu/: test_cu0.py  test_cu1.py  test_cu2.py  test_cu3.py  test_cum.py  test_cur.py  test_cus.py  test_cuv.py
tests/ide/: test_asm.py  test_debug.py  test_dump.py  test_get_program.py  test_load.py  test_source.py  test_split_to_word_and_spaces.py
tests/ide/asm/: test_asm.py  test_mm0.py  test_mm1.py  test_mm2.py  test_mm3.py  test_mmm.py  test_mmr.py  test_mms.py  test_mmv.py
tests/memory/: test_ram.py  test_register.py
tests/shared/: test_enum_mixin.py
