[build-system]
requires = ["hatchling>=1.17", "hatch-vcs>=0.3"]
build-backend = "hatchling.build"

[project]
name = "modelmachine"
dynamic = ["version"]
description = "Model machine emulator"
readme = "README.md"
license = { file = "LICENSE.txt" }
maintainers = [
    { name = "Vladimir Liutov", email = "vs@lutov.net" },
    { name = "Fr. Br. George", email = "georgle@altlinux.org" },
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: Education",
    "Natural Language :: English",
    "Natural Language :: Russian",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Unix",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Education",
    "Topic :: Scientific/Engineering",
    "Topic :: Utilities",
]
requires-python = ">=3.7"
dependencies = [
    "pyparsing~=3.1",
    "prompt_toolkit~=3.0",
    "tomli~=2.0",
]

[project.scripts]
modelmachine = "modelmachine.__main__:main"

[project.urls]
Homepage = "https://github.com/cmc-python/modelmachine"
Repository = "https://github.com/cmc-python/modelmachine.git"
Documentation = "https://github.com/cmc-python/modelmachine#readme"
Issues = "https://github.com/cmc-python/modelmachine/issues"
Changelog = "https://github.com/cmc-python/modelmachine/blob/main/docs/changelog.md"

[tool.hatch.version]
source="vcs"
[tool.hatch.build.hooks.vcs]
version-file = "modelmachine/__about__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/modelmachine",
]

[tool.hatch.envs.dev]
dependencies = [
  "mypy>=1.11",
  "pytest>=7.4",
]

[tool.coverage.run]
source_pkgs = ["modelmachine", "tests"]
branch = true
parallel = true
omit = [
    "modelmachine/__about__.py",
]

[tool.coverage.paths]
model = ["modelmachine"]
tests = ["tests"]

[tool.coverage.report]
exclude_lines = [
    "no cov",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.hatch.envs.hatch-static-analysis]
config-path = "ruff_defaults.toml"
[tool.ruff]
extend = "ruff_defaults.toml"
line-length = 79
indent-width = 4
target-version = "py37"
[tool.ruff.lint]
ignore = [
    "S101",
    "TID252",
]
[tool.ruff.lint.per-file-ignores]
"**/tests/**/*" = [
    "PLR2004",
    "SLF001",
]
